syntax = "proto3";

package roadtrip_map;

option go_package = "insofar.com/roadtrip_map/map_grpc";

// Interface exported by the map server.

// RoadTrip map service provides access to map information.
// The map is a graph of nodes (towns) and vertices (roads).

service RoadTripMap  {
  rpc GetTown(GetTownRequest) returns (Town) {}
  rpc ListStates(ListStatesRequest) returns (ListStatesResponse) {}
  rpc ListTowns(ListTownsRequest) returns (ListTownsResponse) {}
  rpc ListRoads(ListRoadsRequest) returns (ListRoadsResponse) {}
}

message Empty {
}

message Town {
  string id = 1; // format "states/colorado/towns/denver"
  string display_name = 2; // format "Denver"
  string description = 3;
  string state = 4; // format "states/Colorado"
}

message Road {
  string id = 1; // format "roads/i-25"
  string display_name = 2;
  int32 length_miles = 3;
  string town_a = 4;
  string town_b = 5;
}

message State {
  string id = 1; // format "states/colorado"
  string display_name = 2;
}

message GetTownRequest {
  string id = 1;
}

message ListTownsRequest {
  string state = 1;
}

message ListTownsResponse {
  repeated Town towns = 1;
}

message ListRoadsRequest {
  string parent = 1; // ie "/states/colorado/towns/denver"
}

message ListRoadsResponse {
  repeated Road roads = 1;
}

message ListStatesRequest {
}

message ListStatesResponse {
  repeated State states = 1;
}