syntax = "proto3";

package roadtrip;

option go_package = "insofar.com/roadTrip/player_grpc";

// Interface exported by the server.

/*************************************
 * Entities
 ************************************/

message Character {
  string id = 1; // output only
  string character_name = 2;
  Car car = 3; // singleton
}

message Car {
  string id = 1;
  string plate = 2;
  string car_name = 3;
  Location location = 4; // singleton
  int32 direction = 5;
  float velocity_mph = 6;
}

message Location {
  string town_id = 1;
  string road_id = 2;
  float position_miles = 3;
}

message Town {
  string id = 1;
  string state_id = 2;
  string town_name = 3;
  string description = 4;
}

message Trip {
  repeated string town_ids = 1;
}

/*************************************
 * Service
 ************************************/

// RoadTripPlayer service provides access to player information.

service RoadTripPlayer  {
  rpc CreateCharacter(CreateCharacterRequest) returns (Character) {}
  rpc GetCharacter(GetCharacterRequest) returns (Character) {}
  rpc UpdateCharacter(UpdateCharacterRequest) returns (Character) {}
  rpc UpdateCar(UpdateCarRequest) returns (Car) {}
  rpc GetTown(GetTownRequest) returns (Town) {}
  rpc GetCar(GetCarRequest) returns (Car) {}
  rpc GetCarTrip(GetCarTripRequest) returns (Trip) {}
}

/*************************************
 * Requests
 ************************************/

message Empty {}

message GetCharacterRequest {
  string id = 1;
}

message CreateCharacterRequest {
  string captcha_id = 1;
  string character_name = 2;
}

message UpdateCharacterRequest {
  Character character = 1;
}

message UpdateCarRequest {
  Car car = 1;
}

message GetTownRequest {
  string id = 1;
}

message GetCarRequest {
  string id = 1;
}

message GetCarTripRequest {
  string car_id = 1;
}